Fixing cut off create modal.

--- a/app/assets/stylesheets/components/_create.scss
+++ b/app/assets/stylesheets/components/_create.scss
@@ -2,7 +2,7 @@
   border-radius: 0;
   padding: 40px 10px 20px;
   position: absolute;
-  top: 570px;
+  top: 610px;
   width: 92vw;
 
   @media ($screen-sm-up) {
